--- a/上課內容/20240912B.md
+++ b/上課內容/20240912B.md
@@ -3,6 +3,14 @@
 
 # 20240912B.c
 ```c
-
+#include <stdio.h>
+ 
+int main()
+{
+    /* 我的第一个 C 程序 */
+    printf("Hello, World! \n");
+ 
+    return 0;
+}
 
 ```
