--- a/上課內容/20240912B.md
+++ b/上課內容/20240912B.md
@@ -8,9 +8,21 @@
 int main()
 {
     /* 我的第一个 C 程序 */
+    printf("這是龍大大的作業");
     printf("Hello, World! \n");
  
     return 0;
 }
-
+```
+```c
+#include <stdio.h>
+ 
+int main()
+{
+    /* 我的第一个 C 程序 */
+    printf("這是龍大大的作業\n");
+    printf("Hello, World! \n");
+ 
+    return 0;
+}
 ```
